--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build-container:
 release-registry:
   stage: release
   tags:
-    - frontend 
+    - blockchain-build  
   script:
     - > 
       if [ $CI_COMMIT_BRANCH == "master" ] ; then
