--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,3 @@
-variables:
-  GIT_STRATEGY: clone
-
 workflow:
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
@@ -17,7 +14,7 @@ before_script:
 build-container:
   stage: build
   tags:
-    - blockchain-build 
+    - blockchain-docker
   script:
     - > 
       if [ $CI_COMMIT_BRANCH == "master" ] ; then
@@ -27,7 +24,7 @@ build-container:
 release-registry:
   stage: release
   tags:
-    - blockchain-build  
+    - blockchain-docker 
   script:
     - > 
       if [ $CI_COMMIT_BRANCH == "master" ] ; then
