--- a/ci/Makefile
+++ b/ci/Makefile
@@ -4,7 +4,7 @@ iCONTAINER ?= front
 iDOCKERFILE = Dockerfile
 
 container:
-	docker build -f ci/${iDOCKERFILE} -t ${iCONTAINER} . 
+	docker build -f ${iDOCKERFILE} -t ${iCONTAINER} . 
 
 release:
 	docker tag ${iCONTAINER} ${oCONTAINER}/${iCONTAINER}:latest && \
