--- a/ci/Makefile
+++ b/ci/Makefile
@@ -7,5 +7,5 @@ container:
 	docker build -f ${iDOCKERFILE} -t ${iCONTAINER} . 
 
 release:
-	docker tag ${iCONTAINER} ${oCONTAINER}/${iCONTAINER}:latest && \
-	docker push ${oCONTAINER}/${iCONTAINER}:latest
+	docker tag ${iCONTAINER} ${RDOCKER}/${oCONTAINER}/${iCONTAINER}:latest && \
+	docker push ${RDOCKER}/${oCONTAINER}/${iCONTAINER}:latest
