--- a/ci/docker-compose.yaml
+++ b/ci/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       - ../results:/results
     environment:
       - SELNAME=selenium
-      - HOSTNAME=demo.megadex.com
+      - HOSTNAME=${HOSTNAME}
 
 
 
