--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -19,5 +19,5 @@ ENV PATH="/opt/venv/bin:$PATH"
 ENTRYPOINT []
 SHELL ["/bin/sh", "-c"]
 CMD sleep 10 \
-    && py.test storage --junitxml=../results/front_test.xml ; \
+    && py.test storage -p no:cacheprovider --junitxml=../results/front_test.xml ; \
     sleep 5
