--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,8 @@ deploy-tests:
     - cd ci/
     - HOSTNAME=demo-testing.moutai.k8s.clive.tk
     - docker-compose up -d
-    - sleep 60
+    - sleep 40
+    - pwd
   artifacts:
     paths:
       - "../results/front_test.xml"
