--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -21,4 +21,5 @@ ENTRYPOINT []
 SHELL ["/bin/sh", "-c"]
 CMD sleep 10 \
     && py.test storage -p no:cacheprovider --junitxml=../results/front_test.xml ; \
-    sleep 5
+    && chmod 777 results/front_test.xml \
+    && sleep 3
