--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -20,6 +20,7 @@ ENV PATH="/opt/venv/bin:$PATH"
 ENTRYPOINT []
 SHELL ["/bin/sh", "-c"]
 CMD sleep 10 \
-    && py.test storage -p no:cacheprovider --junitxml=../results/front_test.xml ; \
+    && py.test storage -p no:cacheprovider --junitxml=../results/front_test.xml \
+    && pwd \
     && chmod 777 results/front_test.xml \
     && sleep 3
