--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,17 +35,19 @@ deploy-tests:
   stage: tests
   variables:
     GIT_STRATEGY: none
+    HOSTNAME: demo-testing.moutai.k8s.clive.tk
+    RESULT_NAME: front_tests
   tags:
     - blockchain-docker
   script:
-    - set +x
+    - set -x
+    - mkdir results
     - cd ci/
-    - HOSTNAME=demo-testing.moutai.k8s.clive.tk
     - docker-compose up -d
     - sleep 40
   artifacts:
     paths:
-      - $CI_PROJECT_DIR/results/front_test.xml
+      - $CI_PROJECT_DIR/results/$RESULT_NAME.xml
     expire_in: 30 minutes
     reports:
-      junit: $CI_PROJECT_DIR/results/front_test.xml
+      junit: $CI_PROJECT_DIR/results/$RESULT_NAME.xml
