--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ release-registry:
          make --directory=ci/ release ;
       fi  
 
-deploy-tests:
+run-tests:
   stage: tests
   variables:
     GIT_STRATEGY: none
@@ -41,10 +41,16 @@ deploy-tests:
     - blockchain-docker
   script:
     - set -x
-    - mkdir -p results
+    - mkdir -p /tmp/results
     - cd ci/
     - docker-compose up -d
-    - sleep 120
+    - >
+      while [ ! -f /tmp/results/$RESULT_NAME.xml ] ; do
+        echo "Tests not passed yet..."
+        sleep 5 ;
+      done 
+    - ls -l /tmp/results
+    - cp /tmp/results/$RESULT_NAME.xml $CI_PROJECT_DIR/results/
   artifacts:
     paths:
       - $CI_PROJECT_DIR/results/$RESULT_NAME.xml
