--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ run-tests:
     - blockchain-docker
   script:
     - set -x
-    - mkdir -p results
+    - test -d results/ || mkdir -p results
     - touch results/$RESULT_NAME.xml
     - cd ci/
     - docker-compose up -d
@@ -59,11 +59,11 @@ run-tests:
     reports:
       junit: $CI_PROJECT_DIR/results/$RESULT_NAME.xml
 
-# clean:
-#   stage: clean
-#   tags:
-#     - blockchain-docker
-#   script:
-#     - rm -rf /tmp/results
-#     - docker stop selenium
-#   when: always
+clean:
+  stage: clean
+  tags:
+    - blockchain-docker
+  script:
+    - test ! -d || rm -rf results/
+    - docker stop selenium
+  when: always
