--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -1,3 +1,5 @@
+allure-pytest==2.9.45
+allure-python-commons==2.9.45
 async-generator==1.10
 attrs==21.4.0
 certifi==2022.6.15
@@ -16,6 +18,7 @@ pyparsing==3.0.9
 PySocks==1.7.1
 pytest==7.1.2
 selenium==4.2.0
+six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 tomli==2.0.1
