test for new flags in start

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -24,7 +24,7 @@ ENV PATH="/opt/venv/bin:$PATH"
 ENTRYPOINT []
 SHELL ["/bin/sh", "-c"]
 CMD sleep 10 \
-    && py.test storage -p no:cacheprovider --junitxml=../results/front_test.xml \
+    && py.test -v -s storage -p no:cacheprovider --junitxml=../results/front_test.xml \
     && chmod 777 /results/front_test.xml \
     && ls -l > /results/test.txt \
     && sleep 3
