--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,6 @@ run-tests:
   script:
     - set -x
     - test -d results/ || mkdir -p results
-    - test -d results_allure/ || mkdir -p results_allure
     - touch results/$RESULT_NAME.xml
     - cd ci/
     - docker-compose up -d
@@ -52,6 +51,8 @@ run-tests:
         echo "Tests not passed yet..."
         sleep 5 ;
       done
+    - ls -l ../results
+  artifacts:
     paths:
       - $CI_PROJECT_DIR/results/$RESULT_NAME.xml
     expire_in: 30 minutes
