--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,8 @@ build-container:
       if [ $CI_COMMIT_BRANCH == "master" ] ; then
          make --directory=ci/ container  ;
       fi 
+  except:
+    - triggers
 
 release-registry:
   stage: release
@@ -31,6 +33,8 @@ release-registry:
       if [ $CI_COMMIT_BRANCH == "master" ] ; then
          make --directory=ci/ release ;
       fi  
+  except:
+    - triggers
 
 run-tests:
   stage: tests
