--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -4,6 +4,7 @@ async-generator==1.10
 attrs==21.4.0
 certifi==2022.6.15
 cffi==1.15.0
+charset-normalizer==2.0.12
 cryptography==37.0.2
 h11==0.13.0
 idna==3.3
@@ -17,6 +18,9 @@ pyOpenSSL==22.0.0
 pyparsing==3.0.9
 PySocks==1.7.1
 pytest==7.1.2
+pytest-html==3.1.1
+pytest-metadata==2.0.1
+requests==2.28.0
 selenium==4.2.0
 six==1.16.0
 sniffio==1.2.0
