--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,7 @@ build-container:
          make --directory=ci/ container  ;
       fi 
   except:
-    variables:
-      - $ONLY_TESTS == "true"
+    - pipelines
 
 release-registry:
   stage: release
@@ -35,8 +34,7 @@ release-registry:
          make --directory=ci/ release ;
       fi  
   except:
-    variables:
-      - $ONLY_TESTS == "true"
+    - pipelines
 
 run-tests:
   stage: tests
