--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,6 @@ clean:
     GIT_STRATEGY: none
   script:
     - test ! -d results/ || rm -rf results/
-    - test ! -d src/results_allure || sudo -rf src/results_allure
+    - test ! -d src/results_allure || sudo rm -rf src/results_allure
     - docker stop selenium
   when: always
